# esp32-s3-w5500

./: .cproject  LICENSE  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  app_nvs.c  app_nvs.h  ethernet_app.c  ethernet_app.h  http_server.c  http_server.h  main.c  rgb_led.c  rgb_led.h  sntp_time_sync.c  sntp_time_sync.h  tasks_common.h  wifi_app.c  wifi_app.h  wifi_reset_button.c  wifi_reset_button.h
main/webpage/: app.css  app.js  index.html
